fix paperlist header

--- a/Paper2MD.ipynb
+++ b/Paper2MD.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "id": "3d5811f5-691f-4f6a-b767-ff5677d31554",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from collections import OrderedDict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "4ae6af31-70d8-431d-97d8-414cb8071a03",
    "metadata": {},
    "outputs": [
@@ -33,7 +34,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,23 +46,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "id": "8460486f-f08d-4a88-baa6-2e2502ee922a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "odict_keys([2021.0, 2020.0, 2019.0, 2018.0, 2017.0, 2016.0, 2015.0, 2014.0, 2013.0, 2011.0, 2010.0, 2008.0])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "title2link = {}\n",
+    "d = OrderedDict()\n",
     "for index, row in data.iterrows():\n",
     "    if str(row['title']) == 'nan':\n",
     "        continue\n",
     "    if str(row['title']) == '156':\n",
     "        continue\n",
-    "    title2link[row['title']] = row['link to paper']"
+    "    title2link[row['title']] = row['link to paper']\n",
+    "    if row['publication year'] not in d:\n",
+    "        d[row['publication year']] = []\n",
+    "    d[row['publication year']].append(row['title'])\n",
+    "yrs2titles = OrderedDict(sorted(d.items(), reverse=True))\n",
+    "yrs2titles.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "6861ec23-4b08-4b27-a5b5-39ac3cc743ed",
    "metadata": {},
    "outputs": [],
@@ -78,18 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "id": "1dc09c1c-05e8-4895-8b72-63814dba5fbd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for title in title2link:\n",
-    "    md_string += f'[{title}]({title2link[title]})\\n'"
+    "for yr in yrs2titles:\n",
+    "    md_string += f'## {int(yr)}\\n\\n'\n",
+    "    for title in yrs2titles[yr]:\n",
+    "        md_string += f'[{title}]({title2link[title]})\\n'\n",
+    "    md_string += '\\n\\n'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "id": "8c8decdf-e277-4b00-9a2c-71681c3e3186",
    "metadata": {},
    "outputs": [],
@@ -108,6 +129,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
