--- a/Paper2MD.ipynb
+++ b/Paper2MD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "3d5811f5-691f-4f6a-b767-ff5677d31554",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "4ae6af31-70d8-431d-97d8-414cb8071a03",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "8460486f-f08d-4a88-baa6-2e2502ee922a",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "odict_keys([2021.0, 2020.0, 2019.0, 2018.0, 2017.0, 2016.0, 2015.0, 2014.0, 2013.0, 2011.0, 2010.0, 2008.0])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,21 +71,20 @@
     "        continue\n",
     "    title2link[row['title']] = row['link to paper']\n",
     "    if row['publication year'] not in d:\n",
-    "        d[row['publication year']] = []\n",
-    "    d[row['publication year']].append(row['title'])\n",
+    "        d[row['publication year']] = set()\n",
+    "    d[row['publication year']].add(row['title'])\n",
     "yrs2titles = OrderedDict(sorted(d.items(), reverse=True))\n",
     "yrs2titles.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "6861ec23-4b08-4b27-a5b5-39ac3cc743ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "md_string = '''\n",
-    "---\n",
+    "md_string = '''---\n",
     "layout: archive\n",
     "title: \"Papers\"\n",
     "permalink: /datalist/\n",
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "1dc09c1c-05e8-4895-8b72-63814dba5fbd",
    "metadata": {},
    "outputs": [],
@@ -104,13 +103,13 @@
     "for yr in yrs2titles:\n",
     "    md_string += f'## {int(yr)}\\n\\n'\n",
     "    for title in yrs2titles[yr]:\n",
-    "        md_string += f'[{title}]({title2link[title]})\\n'\n",
+    "        md_string += f'[{title}]({title2link[title]})\\n\\n'\n",
     "    md_string += '\\n\\n'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "8c8decdf-e277-4b00-9a2c-71681c3e3186",
    "metadata": {},
    "outputs": [],
